tests/fixtures/invalid/str_sub_none.py
# Cannot subtract Str and None
x: str = "hello" - None
